Finally created a simple logo.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>MyUTube</title>
 </head>
 <body>
     <nav class="nav-wrapper black">
         <div class="container">
-            <a href="#" class="brand-logo white-text"><i class="white material-icons black-text" style="margin-top: 4px; font-size: 40px; ">play_arrow</i>MyUTube</a>
+            <a href="#" class="brand-logo white-text" id="logo-text"><i class="white material-icons black-text" id="logo-icon">play_arrow</i>MyUTube</a>
             
         </div>
     </nav>
