--- a/index.html
+++ b/index.html
@@ -13,11 +13,30 @@
     <nav class="nav-wrapper black">
         <div class="container">
             <a href="#" class="brand-logo white-text" id="logo-text"><i class="white material-icons black-text" id="logo-icon">play_arrow</i>MyUTube</a>
-            
         </div>
     </nav>
+    <section>
+        <div class="container">
+            <h3 class="center">Log In with GOOGLE</h3>
+            <div class="center">
+                <button class="btn black waves-effect waves-light" id="authorize-button">Log In</button>
+                <button class="btn black waves-effect waves-light" id="signout-button">Log Out</button>
+            </div>
+            <div class="content" id="content">
+                <form id="channel-form">
+                    <div class="input-field">
+                        <input type="text" placeholder="Enter channel name" id="channel-input">
+                        <input type="submit" value="Get channel data" class="btn black">
+                    </div>
+                </form>
+                <div class="channel-data"></div>
+                <div class="video-container"></div>
+            </div>
+        </div>
+    </section>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="index.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()" onreadystatechange="if (this.readyState == 'complete') this.onload()"></script>
 </body>
 </html>
