--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Bangers&family=Concert+One&family=Patua+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -13,14 +14,23 @@
     <nav class="nav-wrapper black">
         <div class="container">
             <a href="#" class="brand-logo white-text" id="logo-text"><i class="white material-icons black-text" id="logo-icon">play_arrow</i>MyUTube</a>
+            <a href="#" class="sidenav-trigger" data-target="side-nav-list">
+                <i class="material-icons ">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><button class="btn black waves-effect waves-light" id="signout-button">Log Out</button></li>
+            </ul>
         </div>
     </nav>
+    <ul class="sidenav" id="side-nav-list">
+        <li><button class="btn black waves-effect waves-light sidenav-close" id="signout-button-sidenav">Log Out</button></li>
+        <li><button class="btn black waves-effect waves-light sidenav-close" id="authorize-button-sidenav">Log In</button></li>
+    </ul>
     <section>
         <div class="container">
-            <h3 class="center">Log In with GOOGLE</h3>
+            <h3 class="center" id="google-prompt">Log In with GOOGLE</h3>
             <div class="center">
                 <button class="btn black waves-effect waves-light" id="authorize-button">Log In</button>
-                <button class="btn black waves-effect waves-light" id="signout-button">Log Out</button>
             </div>
             <div class="content" id="content">
                 <form id="channel-form">
@@ -34,6 +44,10 @@
             </div>
         </div>
     </section>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="index.js"></script>
