Added logo and app text in sidenav.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         </div>
     </nav>
     <ul class="sidenav" id="side-nav-list">
-        <li><button class="btn black waves-effect waves-light sidenav-close" id="signout-button-sidenav">Log Out</button></li>
-        <li><button class="btn black waves-effect waves-light sidenav-close" id="authorize-button-sidenav">Log In</button></li>
+        <li class="black"><i class="white material-icons black-text" id="logo-icon-nav">play_arrow</i></li>
+        <li><a href="#" class="brand-logo white-text black" id="logo-text-nav">MyUTube</a></li>
+        <li class="divider"></li>
+        <li class="black"><button class="btn black waves-effect waves-light sidenav-close" id="signout-button-sidenav">Log Out</button></li>
+        <li class="black"><button class="btn black waves-effect waves-light sidenav-close" id="authorize-button-sidenav">Log In</button></li>
     </ul>
     <section>
         <div class="container">
