Added youtube data fetch and display.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,17 @@
                     </select>
                     <label>Catagory</label>
                 </div>
-                
-                <div style="height:500px"></div>
             </div>
-
+            <div class="row" id="video-row">
+                <div class="col s1"></div>
+                <div class="col s10">
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/37s59Y4OkOM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col s1"></div>
+            </div> 
+            <div id="End" style="height:500px"></div>
         </div>    
         
     </section>
