--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <label>Catagory</label>
                 </div>
             </div>
-            <div class="row" id="video-row">
+            <!-- <div class="row" id="video-row">
                 <div class="col s1"></div>
                 <div class="col s10">
                     <div class="video-container">
@@ -73,8 +73,12 @@
                     </div>
                 </div>
                 <div class="col s1"></div>
-            </div> 
-            <div id="End" style="height:500px"></div>
+            </div>  -->
+            <div id="End" style="height:100px"></div>
+            <div class="center">
+                <button class="btn-small black waves-effect waves-light pulse" id="load-more">Load more<i class="material-icons white-text" id="load-more-icon">autorenew</i></button>
+            </div>
+            <div style="height:100px"></div>
         </div>    
         
     </section>
