Seperated logo for mid, large and small.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <nav class="nav-wrapper black">
         <div class="container">
-            <a href="#" class="brand-logo white-text" id="logo-text"><i class="white material-icons black-text" id="logo-icon">play_arrow</i>MyUTube</a>
+            <a href="#" class="brand-logo white-text hide-on-med-and-down" id="logo-text-large"><i class="white material-icons black-text" id="logo-icon-large">play_arrow</i>MyUTube</a>
+            <a href="#" class="brand-logo white-text show-on-medium hide-on-large-only hide-on-small-only" id="logo-text-med"><i class="white material-icons black-text" id="logo-icon-med">play_arrow</i>MyUTube</a>
+            <a href="#" class="brand-logo white-text hide-on-med-and-up" id="logo-text-small"><i class="white material-icons black-text" id="logo-icon-small">play_arrow</i>MyUTube</a>
             <a href="#" class="sidenav-trigger" data-target="side-nav-list">
                 <i class="material-icons ">menu</i>
             </a>
